<resources>
    <string name="app_name">关爱TB</string>
    <string name="action_settings">Settings</string>
    <string name="aty_welcome_patient">我是患者</string>
    <string name="aty_welcome_director">我是督导员</string>
    <string name="dialog_title_initFgt">更新提示</string>
    <string name="dialog_no_initFgt">取消</string>
    <string name="dialog_yes_initFgt">更新</string>
    <string name="login_fgt_login_error">登陆出错,请检查信息是否正确</string>
    <string name="login_fgt_no_name">请输入用户名</string>
    <string name="login_fgt_no_password">请输入不少于6位的密码</string>
    <string name="aty_login_forgetPass"><u>忘记密码</u></string>
    <string name="aty_login_btnLogin">登录</string>
    <string name="aty_login_patient">患者登录</string>
    <string name="aty_login_director">督导员登录</string>
    <string name="aty_login_account">账户</string>
    <string name="aty_login_passWord">密码</string>
    <string name="aty_login_nameHint">请输入用户名或手机号</string>
    <string name="aty_login_btnRegister"><u>注册账户</u></string>
    <string name="aty_pRegister_statement">点击下面的\"注册\"按钮，即表示您同意药管家《使用条款和隐私政策》</string>
    <string name="aty_pRegister_register">注册</string>
    <string name="aty_pRegister_pRegister">手机注册</string>
    <string name="aty_pRegister_eRegister"><u>E-mail注册</u></string>
    <string name="aty_pRegister_yRegister"><u>已经注册</u></string>
    <string name="aty_pw_old">旧密码</string>
    <string name="aty_pw_new">新密码</string>
    <string name="aty_pRegister_passHint">密码不少于6位</string>
    <string name="aty_pho_pwd_title">手机密码找回</string>
    <string name="aty_pho_pwd_btn">提交</string>
    <string name="aty_pho_pwd_email">E-mail找回</string>
    <string name="aty_eRegister_title">E-mail注册</string>
    <string name="aty_eRegister_btn">注册</string>
    <string name="aty_eRegister_account">账户</string>
    <string name="aty_eRegister_account_prompt">支持英文和数字,不少于4位</string>
    <string name="aty_eRegister_pass_prompt">支持英文和数字,不少于6位</string>
    <string name="aty_pho_email_title">E-mail密码找回</string>
    <string name="aty_pho_email_prompt">提交完成后请登陆邮箱重新设置密码</string>
    <string name="aty_verCode_getCode">获取验证码</string>
    <string name="aty_verCode_code">验证码</string>
    <string name="aty_verCode_next">下一步</string>
    <string name="aty_bindBox_addBox">添加药盒</string>
    <string name="aty_bindBox_jump">跳过</string>
    <string name="aty_bindBox_next">下一步</string>
    <string name="bind_fgt_no_id">请填写正确的ID码</string>
    <string name="aty_bindBox_statement">请输入药盒底部铭牌上的产品ID及SN码</string>
    <string name="bind_fgt_no_sn">请填写正确的SN码</string>
    <string name="bind_fgt_first_error">验证出错,确保你的ID和SN填写正确~</string>
    <string name="login_fgt_is_box_error">请求是否绑定药盒数据出错</string>
    <string name="bind_fgt_first_not_correct">ID和SN码不匹配,请检查号码是否正确~</string>
    <string name="tv_gsm_graphic">如图示</string>
    <string name="tv_gsm_title">GSM网络连接</string>
    <string name="tv_bind_box_title">绑定药盒</string>
    <string name="btn_bind_box_retry">重试</string>
    <string name="btn_bind_box_success">绑定成功</string>
    <string name="btn_bind_box_binding">绑定中…倒计时</string>
    <string name="btn_bind_box_binding_error">uid代码或sn代码是不正确的,请返回添加药盒页</string>
    <string name="aty_userInfo_addBox">添加药盒</string>
    <string name="aty_userInfo_box">药盒ID</string>
    <string name="aty_userInfo_user">姓名</string>
    <string name="aty_userInfo_age">身份证号</string>
    <string name="aty_userInfo_gender">性别</string>
    <string name="aty_userInfo_address">地址</string>
    <string name="aty_userInfo_guardian1">QQ</string>
    <string name="aty_userInfo_guardian2">微信</string>
    <string name="aty_userInfo_phone">手机号码</string>
    <string name="aty_userInfo_email">邮箱</string>
    <string name="aty_userInfo_enter">进入</string>
    <string name="aty_userInfo_institution">机构</string>
    <string name="aty_userInfo_hint_user">必须填写,用于电话呼叫</string>
    <string name="aty_userInfo_hint_guardian">建议填写,用于电话呼叫</string>
    <string name="fgt_userInfo_tv_title">资料完善</string>
    <string name="aty_ptMain_medicine">关爱TB</string>
    <string name="aty_ptMain_record">记录</string>
    <string name="aty_ptMain_knowledge">知识</string>
    <string name="aty_ptMain_me">我的</string>
    <string name="aty_ptMain_addBox">添加药盒</string>
    <string name="aty_ptMain_addDir">添加督导员</string>
    <string name="aty_ptMain_modifyInfo">修改资料</string>
    <string name="fgt_medic_prompt">无药物信息</string>
    <string name="fgt_medic_interview">访视事件</string>
    <string name="fgt_medic_visit">复诊事件</string>
    <string name="fgt_medic_exception1">异常天数记录:有</string>
    <string name="fgt_medic_exception2">日未按时服药</string>
    <string name="fgt_medic_details">更多记录详情请登陆</string>
    <string name="fgt_medic_cjyun"><u>采集云官网</u></string>
    <string name="MON">周一</string>
    <string name="TUE">周二</string>
    <string name="WED">周三</string>
    <string name="THU">周四</string>
    <string name="FRI">周五</string>
    <string name="SAT">周六</string>
    <string name="SUN">周日</string>
    <string name="fgt_me_boxManger">我的消息</string>
    <string name="fgt_me_director">我的督导员</string>
    <string name="fgt_me_feedback">服务意见箱</string>
    <string name="fgt_me_general">通用</string>
    <string name="aty_myInfo_title">我的信息</string>
    <string name="aty_myDir_title">我的督导员</string>
    <string name="aty_myDir_editor">编辑</string>
    <string name="aty_newDir_verify">待验证的督导员</string>
    <string name="aty_newDir_search">搜索:</string>
    <string name="aty_newDir_title">新的督导员</string>
    <string name="suMainActivity_bottombar_mypatients">我的患者</string>
    <string name="suMainActivity_bottombar_my">我的</string>
    <string name="suMainActivity_title">关爱TB</string>
    <string name="suMainActivity_add">添加患者</string>
    <string name="suMainActivity_search_hint">搜索我的患者</string>
    <string name="suMainActivity_visit">上门访问</string>
    <string name="suMainActivity_modified_data">修改资料</string>
    <string name="suMainActivity_alter_password">重设密码</string>
    <string name="suMainActivity_new_password">新密码</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SuPatientNews_title">患者信息</string>
    <string name="SuPatientNews_sex">男</string>
    <string name="suPatientNews_title">患者信息</string>
    <string name="suVisitActivity_title">事件详情</string>
    <string name="suPatientNews_identity_card">身份证号码</string>
    <string name="suMain_affirm">上门访视</string>
    <string name="allSuActivity_title">所有患者</string>
    <string name="suAllActivity_all">所有患者</string>
    <string name="suAllActivity_one_month">近一个月</string>
    <string name="suAllActivity_three_month">近三个月</string>
    <string name="suAllActivity_six_month">近半年</string>
    <string name="suAllActivity_year">近一年</string>
    <string name="suPatientNews_indicator_baseNews">基本信息</string>
    <string name="suPatientNews_indicator_tackPills">服药统计</string>
    <string name="suPatientNews_indicator_subsequentVisit">复诊情况</string>
    <string name="suPatientNews_indicator_visit">访问情况</string>
    <string name="fragment_subsequent_visit_serialNumber">序号</string>
    <string name="fragment_subsequent_visit_reserve">预定复诊时间</string>
    <string name="fragment_subsequent_visit_reality">实际复诊时间</string>
    <string name="fragment_history_tack_pill_statistics">历史服药统计</string>
    <string name="fragment_history_tack_pill_cycle">历史服药周期</string>
    <string name="fragment_history_tack_drug_info">药物信息</string>
    <string name="fragment_history_tack_start_time">开始时间</string>
    <string name="fragment_history_tack_end_time">结束时间</string>
    <string name="fragment_history_tack_check">查看</string>
    <string name="fragment_history_more_record">更多服药记录请登录</string>
    <string name="fragment_history_cjy_vaeCn">采集云官网</string>
    <string name="suVisitActivity_news">计划访视的内容</string>
    <string name="suVisitActivity_visit_time">访视时间</string>
    <string name="suVisitActivity_commit">提交</string>
    <string name="suVisitActivity_Come_to_visit">上门访视</string>
    <string name="suVisitActivity_telephone_visit">电话访视</string>
    <string name="suPatientNews_phone">电话：</string>
    <string name="suPatientNews_location">地址：</string>
    <string name="suPatientNews_id">ID:</string>
    <string name="suPatientNews_card">身份证号码：</string>
    <string name="suPatientNews_cellphone">手机号码：</string>
    <string name="suPatientNews_qq">QQ</string>
    <string name="suPatientNews_weixin">微信</string>
    <string name="suPatientNews_email">邮箱</string>
    <string name="suPatientNews_institution_name">机构名称</string>
    <string name="suPatientNews_institution_coding">机构编码</string>
    <string name="suPatientNews_institution_location">机构地址</string>
    <string name="suPatientNews_not_visit">没有随访事件</string>
    <string name="suMainActivity_dialog_Isee">知道了</string>
    <string name="suMainActivity_dialog_infrom">通知消息</string>
    <string name="send_net_request">数据加载中,请稍等…</string>
    <string name="tv_gsm_prompt">1.请确认当前药盒的流量套餐在有效期内\n2.打开智能药盒当时间自动更新后请点击下一步</string>
    <string name="tv_bind_box_prompt">点击\\\"下一步\\\"后请长按药盒背部的AT键嘀声后松开</string>
    <string name="reset_fgt_no_name">请输入正确格式密码</string>
    <string name="reset_fgt_no_code">请先获取验证码</string>
    <string name="tv_drug_cycle">药物周期</string>
    <string name="tv_drug_begin_time">开始时间</string>
    <string name="tv_drug_end_time">结束时间</string>
    <string name="tv_drug_title">时间及药物</string>
    <string name="tv_next_drug">距离下次服药时间</string>
    <string name="tv_reset_password">重设密码</string>
    <string name="tv_fgt_general">通用设置</string>
    <string name="tv_font_size">字体大小</string>
    <string name="tv_check_update">检查更新</string>
    <string name="tv_about_us">关于我们</string>
    <string name="tv_quite_login">退出登录</string>
    <string name="tv_fgt_suggestion">意见箱</string>
    <string name="edit_problem_description">问题说明:请在此处填写你的意见或建议</string>
    <string name="edit_phone_email">E-mail或手机号码</string>
    <string name="submit">提交</string>
    <string name="serial_number">序号</string>
    <string name="scheduled_appointment_time">预定复诊时间</string>
    <string name="actual_appointment_time">实际复诊时间</string>
    <string name="no_return_visit">未复诊</string>
    <string name="suggestion_toast_content">请先填写意见信息</string>
    <string name="suggestion_toast_phone">请填写联系方式</string>
    <string name="submit_ok">提交成功</string>
    <string name="response_null">响应数据为空值</string>
    <string name="tv_wifi_title">Wi-Fi连接</string>
    <string name="tv_wifi_prompt">1.请在智能药盒5米有效范围内操作\n2.请确保您的手机已经连接到Wi-Fi网络\n3.如果智能药盒已连接网络请跳过此设置界面</string>
    <string name="photo_error">拍照出错，请确保提供权限~</string>
    <string name="image_error">相册出错~</string>
    <string name="no_time">--:--</string>
    <string name="no_down_time">--:--:--</string>
    <string name="tv_order">序号</string>
    <string name="tv_drug_name">药物名</string>
    <string name="tv_zq_start">周期开始</string>
    <string name="tv_zq_end">周期结束</string>
    <string name="ok">确定</string>
    <string name="no">取消</string>
    <string name="aty_userInfo_organization_name">机构名称</string>
    <string name="submit_error">提交出错,请稍后再试~</string>
    <string name="tv_visit_title">访视事件</string>
    <string name="tv_revisit_title">复诊事件</string>
    <string name="myInfo">我的信息</string>
    <string name="mynews">我的信息</string>
    <string-array name="cv_week_head">
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
        <item>日</item>
    </string-array>
    <string name="redact">编辑</string>
    <string name="remove_bing">解绑成功~</string>
    <string name="remove_error">解绑失败~</string>
    <string name="box_online">药盒在线</string>
    <string name="box_unline">药盒离线</string>
    <string name="tv_fgt_font">修改字体</string>
    <string name="tv_fgt_aboutus">关于我们</string>
    <string name="tv_warning_1">1.药管家GSM版智能药盒在第一次开机激活网络时，可能需要几十秒钟.\n2.当激活成功后智能药盒上的时钟会更新为当前网络时间.\n3.请您耐心等待…</string>
    <string name="tv_warning_2">绑定药盒:\n1.网络激活成功后，请登录药管家APP输入药盒底部铭牌上的产品ID和SN码.\n2.点击app里的下一步后，长按智能药盒上的“AT”键，在嘀声后松开.</string>
</resources>