<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/include_actionBar"
        layout="@layout/include_actionbar" />

    <include
        android:id="@+id/include_su_patient_news_title"
        layout="@layout/include_su_patient_news_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/module_segment_line_green"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/suPatientNews_indicator_baseNews"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/suPatientNews_indicator_baseNews"
                android:textSize="?attr/fontSize_2" />

            <TextView
                android:id="@+id/suPatientNews_indicator_tackPills"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/suPatientNews_indicator_tackPills"
                android:textSize="?attr/fontSize_2" />

            <TextView
                android:id="@+id/suPatientNews_indicator_subsequentVisit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/suPatientNews_indicator_subsequentVisit"
                android:textSize="?attr/fontSize_2" />

            <TextView
                android:id="@+id/suPatientNews_indicator_visit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/suPatientNews_indicator_visit"
                android:textSize="?attr/fontSize_2" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_su_patient_news_indicator"
            android:layout_width="10dp"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:background="#fff" />
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_su_patient_news"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>

</LinearLayout>