<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ly_ppw_main_box"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_layout_height"
        android:background="@drawable/bg_ppw_main_add"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/visit" />

        <TextView
            style="@style/MedicineContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suMainActivity_visit"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_ppw_main_visit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_layout_height"
        android:background="@drawable/bg_ppw_main_add"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/toolbar_more_alter" />

        <TextView
            style="@style/MedicineContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suMainActivity_modified_data"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_ppw_main_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_layout_height"
        android:background="@drawable/bg_ppw_main_add"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/improve" />

        <TextView
            style="@style/MedicineContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suMainActivity_alter_password"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>